p2/conf/app2.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: app-two

spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2

  template:
    metadata:
      labels:
        app: app2
  
    spec:
      containers:
        - name: app-two
          image: hashicorp/http-echo
          args:
            - "-text=hello from app2"

---
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 5678
#http echo default listening port
